syntax = "proto3";
package Classlink;
option java_package = "com.classlink.websocket.api.jwt.domain.proto";
option java_outer_classname = "JwtExceptionProto";

message JwtException {
  string Message = 1;
}